CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT( GenerateLobeSurfaceModels )

SET ( MODULE_NAME GenerateLobeSurfaceModels )

ADD_LIBRARY( GenerateLobeSurfaceModelsHelper GenerateLobeSurfaceModelsHelper.cxx )

SET ( MODULE_TARGET_LIBRARIES
  ${VTK_LIBRARIES}
  GenerateLobeSurfaceModelsHelper
  )

SET ( MODULE_SRCS GenerateLobeSurfaceModels.cxx )

cipMacroBuildCLI(
    NAME ${MODULE_NAME}
    ADDITIONAL_TARGET_LIBRARIES ${MODULE_TARGET_LIBRARIES}
    ADDITIONAL_INCLUDE_DIRECTORIES ${MODULE_INCLUDE_DIRECTORIES}
    SRCS ${MODULE_SRCS}
    )

IF ( CIP_BUILD_TESTING )
  SUBDIRS ( Testing )
ENDIF( CIP_BUILD_TESTING ) 

