CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT( GenerateModel )

INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/Common )
INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/Utilities )

SET ( GenerateModel_SOURCE GenerateModel.cxx )

ADD_EXECUTABLE ( GenerateModel ${GenerateModel_SOURCE})
TARGET_LINK_LIBRARIES ( GenerateModel ${ITK_LIBRARIES} ${VTK_LIBRARIES} )

